Add biicode URL to config

--- a/biicode.conf
+++ b/biicode.conf
@@ -64,3 +64,7 @@
   # By default they are copied to bin/user/block/... which should be taken into account
   # when loading from disk such data
   # image.cpp + image.jpg  # code should write open("user/block/image.jpg")
+
+[parent]
+    caf_bot/actor-framework: 0
+
