Add get_process_id utility function

--- a/libcaf_core/CMakeLists.txt
+++ b/libcaf_core/CMakeLists.txt
@@ -50,6 +50,7 @@ set (LIBCAF_CORE_SRCS
      src/exit_reason.cpp
      src/forwarding_actor_proxy.cpp
      src/get_mac_addresses.cpp
+     src/get_process_id.cpp
      src/get_root_uuid.cpp
      src/group.cpp
      src/group_manager.cpp
