--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -283,6 +283,9 @@ install(DIRECTORY libcaf_core/cppa/
 # install includes from io
 install(DIRECTORY libcaf_io/caf/ DESTINATION include/caf
         FILES_MATCHING PATTERN "*.hpp")
+# install includes from test
+install(DIRECTORY libcaf_test/caf/ DESTINATION include/caf
+        FILES_MATCHING PATTERN "*.hpp")
 # install includes from opencl
 if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/libcaf_opencl/CMakeLists.txt")
   install(DIRECTORY libcaf_opencl/caf/ DESTINATION include/caf
