Make 'libcaf_io' and 'libcaf_io_asio' separate libraries
If --with-asio (CAF_USE_ASIO) flag is set, then provide another set of
IO libraries:

 * 'libcaf_io_asio_shared' alongside with 'libcaf_io_shared'
 * 'libcaf_io_asio_static' alongside with 'libcaf_io_static'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -368,10 +368,18 @@ else()
 endif()
 add_subdirectory(libcaf_io)
 # set io lib for sub directories
-if(NOT CAF_BUILD_STATIC_ONLY)
-  set(LIBCAF_IO_LIBRARY libcaf_io_shared)
+if(CAF_USE_ASIO)
+  if(NOT CAF_BUILD_STATIC_ONLY)
+    set(LIBCAF_IO_LIBRARY libcaf_io_asio_shared)
+  else()
+    set(LIBCAF_IO_LIBRARY libcaf_io_asio_static)
+  endif()
 else()
-  set(LIBCAF_IO_LIBRARY libcaf_io_static)
+  if(NOT CAF_BUILD_STATIC_ONLY)
+    set(LIBCAF_IO_LIBRARY libcaf_io_shared)
+  else()
+    set(LIBCAF_IO_LIBRARY libcaf_io_static)
+  endif()
 endif()
 # set opencl lib for sub directories if not told otherwise
 if(NOT CAF_NO_OPENCL
