Fix linker flags for static build, close #320

--- a/libcaf_io/CMakeLists.txt
+++ b/libcaf_io/CMakeLists.txt
@@ -46,6 +46,7 @@ endif ()
 # build static library only if --build-static or --build-static-only was set
 if (CAF_BUILD_STATIC_ONLY OR CAF_BUILD_STATIC)
   add_library(libcaf_io_static STATIC ${LIBCAF_IO_HDRS} ${LIBCAF_IO_SRCS})
+  target_link_libraries(libcaf_io_static ${LD_FLAGS} ${LIBCAF_CORE_LIBRARY})
   set_target_properties(libcaf_io_static PROPERTIES OUTPUT_NAME caf_io_static)
   if(NOT WIN32)
     install(TARGETS libcaf_io_static ARCHIVE DESTINATION lib)
