Re-organize BASP header + documentation update
The BASP header has been re-organized for better readability and in advance
of future extensions. This is a breaking change!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -527,7 +527,7 @@ configure_file("${CMAKE_CURRENT_SOURCE_DIR}/manual/variables.tex.in"
 # check for doxygen and add custom "doc" target to Makefile
 find_package(Doxygen)
 if(DOXYGEN_FOUND)
-  configure_file("${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in"
+  configure_file("${CMAKE_CURRENT_SOURCE_DIR}/doc/Doxyfile.in"
                  "${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile"
                  @ONLY)
   add_custom_target(doc "${DOXYGEN_EXECUTABLE}"
