Fix build on MSVC
This commit includes a fix for `accept` of the socket API with MSVC.

Examples are now working, but use the `trivial match case`, the `advanced
match case` is not available on MSVC due to internal compiler errors.

The `thread_local` keyword is used on MSVC and GCC, while Clang does not
support it for now.

This commit also fixes minor warnings with the MSVC compiler and removes
the `pragma comment` for linking libraries with MSVC.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -196,6 +196,9 @@ if(MINGW)
 else()
   set(EXTRA_FLAGS "${EXTRA_FLAGS} -fPIC")
 endif()
+if (WIN32)
+  set(LD_FLAGS ${LD_FLAGS} ws2_32 iphlpapi)
+endif()
 # iOS support
 if(CAF_OSX_SYSROOT)
   set(CMAKE_OSX_SYSROOT "${CAF_OSX_SYSROOT}")
