Add `announce_actor_type`, revise middleman actor

--- a/libcaf_core/CMakeLists.txt
+++ b/libcaf_core/CMakeLists.txt
@@ -24,6 +24,7 @@ set (LIBCAF_CORE_SRCS
      src/actor_proxy.cpp
      src/actor_registry.cpp
      src/attachable.cpp
+     src/announce_actor_type.cpp
      src/behavior.cpp
      src/behavior_stack.cpp
      src/behavior_impl.cpp
