Port examples to new API

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -22,11 +22,9 @@ macro(add name folder)
   add_dependencies(${name} all_examples)
 endmacro()
 
-add(announce_1 type_system)
-add(announce_2 type_system)
-add(announce_3 type_system)
-add(announce_4 type_system)
-add(announce_5 type_system)
+add(custom_types_1 custom_types)
+add(custom_types_2 custom_types)
+add(custom_types_3 custom_types)
 add(dancing_kirby message_passing)
 add(dining_philosophers message_passing)
 add(hello_world .)
