Tweak example INI file

--- a/examples/caf-application.ini
+++ b/examples/caf-application.ini
@@ -1,16 +1,16 @@
 ; This file shows all possible parameters with defaults.
-; Values enclosed in <> are detected at runtime per default.
+; Values enclosed in <> are detected at runtime unless defined by the user.
 
 ; when using the default scheduler
 [scheduler]
-; accepted alternative: "work-sharing"
-policy="work-stealing"
+; accepted alternative: 'sharing'
+policy='stealing'
 ; configures whether the scheduler generates profiling output
 enable-profiling=false
 ; can be overriden to force a fixed number of threads
-max-threads=<detected at runtime>
+max-threads=<number of cores>
 ; configures the maximum number of messages actors can consume in one run
-max-throughput=<numeric_limits<size_t>::max()>
+max-throughput=<infinite>
 ; measurement resolution in milliseconds (only if profiling is enabled)
 profiling-ms-resolution=100
 ; output file for profiler data (only if profiling is enabled)
@@ -20,5 +20,5 @@ profiling-output-file="/dev/null"
 [middleman]
 ; configures whether MMs try to span a full mesh
 enable-automatic-connections=false
-
-
+; accepted alternative: 'asio' (only when compiling CAF with ASIO)
+network-backend='default'
