Implement new error type for maybe<T>
Remove `error_atom` and `with_either<T>::or_else<U>`. Instead, typed actors are
allowed to return `maybe<T>` instead of `T` and report errors back to
synchronous callers via explicit errors. Errors are omitted for asynchronous
("fire-and-forget") clients. All errors in CAF are bundled in `caf::sec`
(System Error Codes), but users of CAF are free to define custom errors.
Relates #369 and relates #367.

--- a/libcaf_core/CMakeLists.txt
+++ b/libcaf_core/CMakeLists.txt
@@ -42,7 +42,7 @@ set (LIBCAF_CORE_SRCS
      src/detached_threads.cpp
      src/duration.cpp
      src/dynamic_message_data.cpp
-     src/either.cpp
+     src/error.cpp
      src/event_based_actor.cpp
      src/exception.cpp
      src/execution_unit.cpp
@@ -73,6 +73,7 @@ set (LIBCAF_CORE_SRCS
      src/ripemd_160.cpp
      src/scoped_actor.cpp
      src/scoped_execution_unit.cpp
+     src/sec.cpp
      src/serializer.cpp
      src/shared_spinlock.cpp
      src/sync_request_bouncer.cpp
