Add RIAC probe module to actor system

--- a/examples/caf-application.ini
+++ b/examples/caf-application.ini
@@ -22,3 +22,10 @@ profiling-output-file="/dev/null"
 enable-automatic-connections=false
 ; accepted alternative: 'asio' (only when compiling CAF with ASIO)
 network-backend='default'
+
+; when loading riac::probe
+[probe]
+; denotes the hostname or IP address to reach the Nexus
+nexus-host=""
+; denotes the port where the Nexus actor is published
+nexus-port=0
