Remove attachable-related code from abstract_actor

--- a/libcaf_core/CMakeLists.txt
+++ b/libcaf_core/CMakeLists.txt
@@ -55,6 +55,7 @@ set (LIBCAF_CORE_SRCS
      src/group.cpp
      src/group_manager.cpp
      src/match_case.cpp
+     src/monitorable_actor.cpp
      src/local_actor.cpp
      src/logger.cpp
      src/mailbox_element.cpp
